Fixed non wrapping paragraph problem for farmfresh section in IE

--- a/css/main.css
+++ b/css/main.css
@@ -32,9 +32,9 @@
     .virtualTour a:hover, .virtualTour a:focus {background-color: #980404; color: #fff;}
 
     /* Farm fresh section */
-    .farmFresh {display: flex; flex-direction: row; justify-content: center;}
+    .farmFresh {display: flex; flex-direction: row; justify-content: center;} 
     .farmFresh div {display: flex; flex-direction: column; align-items: center; width: calc(1040px * 0.5);}
-    .farmFresh p {text-align: center; line-height: 1.8; padding: 0 80px;}
+    .farmFresh p {text-align: center; line-height: 1.8; padding: 0 80px; width: inherit;}
     .farmFresh h2 {margin: 40px 0 4px;}
     #chickenPhoto {background: url("../layout1-assets/chicken.webp") no-repeat center; background-size: cover; min-height: 400px; width: 520px; box-sizing: border-box;}
     #squashPhoto {background: url("../layout1-assets/squash.webp") no-repeat center; background-size: cover; min-height: 400px; width: 520px; box-sizing: border-box;}
